deploy/k8s/base/cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k-comms-cluster
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: k-comms
  ports:
    - name: epmd
      port: 4369
      targetPort: epmd
      protocol: TCP
    - name: distribution
      port: 9100
      targetPort: distribution
      protocol: TCP
