deploy/k8s/base/edge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k-comms-edge
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: edge
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
